Using tensorflow to detect overlap

--- a/load_javascript_via_content_delivery_networks.ipynb
+++ b/load_javascript_via_content_delivery_networks.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -74,6 +74,9 @@
        "function add_graph_to_notebook(tf){\n",
        "    console.log(tf.range(10));\n",
        "    console.log(\"Loaded tensorflow\");\n",
+       "    \n",
+       "    var x = tf.tensor([1, 2, 3, 4],[2,2]);\n",
+       "    console.log(x);\n",
        "}\n"
       ],
       "text/plain": [
@@ -93,6 +96,9 @@
     "function add_graph_to_notebook(tf){\n",
     "    console.log(tf.range(10));\n",
     "    console.log(\"Loaded tensorflow\");\n",
+    "    \n",
+    "    var x = tf.tensor([1, 2, 3, 4],[2,2]);\n",
+    "    console.log(x);\n",
     "}"
    ]
   },
