--- a/generate_dataset.ipynb
+++ b/generate_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
     {
      "data": {
       "text/html": [
-       " <button id = \"clear_button\"> Clear input </button>"
+       " <button id = \"clear_bu|tton\"> Clear input </button>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -59,12 +59,12 @@
     "display(HTML(\"<style>div { touch-action: none;}</style>\"))\n",
     "display(HTML(' <div hidden><canvas id=\"record_canvas\" width=\"800\" height=\"400\"></canvas></div>'))\n",
     "display(HTML(' <div><canvas id=\"interface_canvas\" width=\"800\" height=\"400\"></canvas></div>'))\n",
-    "display(HTML(' <button id = \"clear_button\"> Clear input </button>'))"
+    "display(HTML(' <button id = \"clear_bu|tton\"> Clear input </button>'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -619,6 +619,113 @@
        "    test_overlap_detection()\n",
        "});\n",
        "\n",
+       "function assert(condition, message) {\n",
+       "    if (!condition) {\n",
+       "        throw message || \"Assertion failed\";\n",
+       "    }\n",
+       "}\n",
+       "\n",
+       "function overlap(symbol1,symbol2){\n",
+       "    if(box_overlap(symbol1,symbol2)){//check overlap efficiently by checking coordinates first\n",
+       "        //then find intersection to avoid checking an unnecessarily large patch\n",
+       "        var xmin1 = symbol1.coordinates[0];\n",
+       "        var ymin1 = symbol1.coordinates[1];\n",
+       "        var xmax1 = symbol1.coordinates[2];\n",
+       "        var ymax1 = symbol1.coordinates[3];\n",
+       "\n",
+       "        var xmin2 = symbol2.coordinates[0];\n",
+       "        var ymin2 = symbol2.coordinates[1];\n",
+       "        var xmax2 = symbol2.coordinates[2];\n",
+       "        var ymax2 = symbol2.coordinates[3];\n",
+       "        \n",
+       "        var xmin = Math.max(xmin1,xmin2);\n",
+       "        var xmax = Math.min(xmin1,xmin2);\n",
+       "        var ymin = Math.max(ymin1,ymin2);\n",
+       "        var ymax = Math.min(ymin1,ymin2);\n",
+       "        \n",
+       "        var left1 = Math.abs(xmin1 - xmin);\n",
+       "        var top1 = Math.abs(ymin1 - ymin);\n",
+       "        \n",
+       "        var left2 = Math.abs(xmin2 - xmin);\n",
+       "        var top2 = Math.abs(ymin2 - ymin);\n",
+       "        \n",
+       "        var width = Math.min(xmax1,xmax2)-Math.max(xmin1,xmin2);\n",
+       "        var height = Math.min(ymax1,ymax2)-Math.max(ymin1,ymin2);\n",
+       "        \n",
+       "        console.log(\"left1 up1\");\n",
+       "        console.log(left1);\n",
+       "        console.log(top1);\n",
+       "        \n",
+       "        console.log(\"left2 up2\");\n",
+       "        console.log(left2);\n",
+       "        console.log(top2);\n",
+       "        \n",
+       "        console.log(width);\n",
+       "        console.log(height);\n",
+       "        \n",
+       "        var patch1 = symbol1.merged.slice([left1,top1],[height,width]);\n",
+       "        var patch2 = symbol2.merged.slice([left2,top2],[height,width]);\n",
+       "        \n",
+       "        var overlap = tf.any(tf.equal(tf.add(patch1, patch2),510));\n",
+       "        return Boolean(Array.from(overlap.dataSync())[0])\n",
+       "        \n",
+       "    }\n",
+       "}\n",
+       "\n",
+       "class InputSymbol { \n",
+       "    /* Sets stroke of type image_data and the respective coordinates. The red channel of the stroke is saved as a tensor*/\n",
+       "    constructor(stroke, coordinates) {\n",
+       "        this.input_strokes = [];\n",
+       "        this.coords = [];\n",
+       "        this.merged = null;\n",
+       "        this.is_alive = true;\n",
+       "        this.symbol_name = \"\";\n",
+       "        this.combined_coords = null;\n",
+       "        \n",
+       "        //var stroke1 = tf.tensor(Uint8Array.from(stroke1.data),[4,stroke1.data.height,stroke1.data.width]);\n",
+       "        this.add_stroke(stroke, coordinates);\n",
+       "        this.merged = this.input_strokes[0];//does this have side effects???\n",
+       "        //always the current coordinates; They may grow when another stroke is added \n",
+       "    }\n",
+       "    \n",
+       "    /*Adds a stroke i.e. an image_data to this.input_stokes as well coordinates i.e. a list of coordinates.\n",
+       "      Updates the combined coordinates\n",
+       "    */\n",
+       "    add_stroke(image_data, coordinates){\n",
+       "        image_data = tf.tensor(Uint8Array.from(image_data.data),[4,image_data.height,image_data.width]);\n",
+       "        var r,g,b,a;\n",
+       "        [r,g,b,a] = tf.split(image_data,[1,1,1,1],0);//Get all the colorchannels\n",
+       "        r = tf.squeeze(r);//use only red channel\n",
+       "        this.input_strokes.push(r);//we only save the red channel\n",
+       "        this.coords.push(coordinates);\n",
+       "        \n",
+       "        if(this.combined_coords){\n",
+       "            this.combined_coords = [Math.min(this.combined_coords[0],coordinates[0]),\n",
+       "                                    Math.min(this.combined_coords[1],coordinates[1]),\n",
+       "                                    Math.max(this.combined_coords[2],coordinates[2]),\n",
+       "                                    Math.max(this.combined_coords[3],coordinates[3])]\n",
+       "        } else this.combined_coords = coordinates;\n",
+       "        \n",
+       "    }\n",
+       "    \n",
+       "    get coordinates(){\n",
+       "        return this.combined_coords;\n",
+       "    }\n",
+       "}\n",
+       "\n",
+       "function box_overlap(symbol1,symbol2){\n",
+       "    var xmin1 = symbol1.coordinates[0];\n",
+       "    var ymin1 = symbol1.coordinates[1];\n",
+       "    var xmax1 = symbol1.coordinates[2];\n",
+       "    var ymax1 = symbol1.coordinates[3];\n",
+       "\n",
+       "    var xmin2 = symbol2.coordinates[0];\n",
+       "    var ymin2 = symbol2.coordinates[1];\n",
+       "    var xmax2 = symbol2.coordinates[2];\n",
+       "    var ymax2 = symbol2.coordinates[3];\n",
+       "    \n",
+       "    return (xmax1 > xmin2) && (xmax2 > xmin1) && (ymax1 > ymin2) && (ymax2 > ymin1)    \n",
+       "}\n",
        "\n",
        "function pixel_overlap(pic1,pic2){\n",
        "    var r1,r2,g,b,a;\n",
@@ -635,6 +742,9 @@
        "}\n",
        "\n",
        "function test_overlap_detection(){\n",
+       "    var result = null;\n",
+       "    \n",
+       "    console.log(\"1. Testing pixel_overlap\");//////////////// TEST 1 ////////////////////\n",
        "    var stroke1 = new ImageData(100,100);\n",
        "    var stroke2 = new ImageData(100,100);\n",
        "    \n",
@@ -644,12 +754,38 @@
        "    stroke1 = tf.tensor(Uint8Array.from(stroke1.data),[4,100,100]);\n",
        "    stroke2 = tf.tensor(Uint8Array.from(stroke2.data),[4,100,100]);\n",
        "    \n",
-       "    var result = pixel_overlap(stroke1,stroke2);\n",
+       "    result = pixel_overlap(stroke1,stroke2);\n",
        "    console.log(new Date().getTime()-time);\n",
        "    console.log(result);\n",
+       "\n",
+       "    console.log(\"2. Testing box overlap\");////////////////// TEST 2 /////////////////////\n",
+       "    var stroke1 = new ImageData(100,100);\n",
+       "    var stroke2 = new ImageData(100,100);\n",
        "    \n",
-       "    //overlap.print();\n",
-       "    //var result = overlap.toString().slice(11) == 'true'//discard initial part of string and parse boolean\n",
+       "    var symbol1 = new InputSymbol(stroke1, [100,100,200,200]);//x,y,x,y\n",
+       "    var symbol2 = new InputSymbol(stroke1, [100,100,200,200]);//x,y,x,y identical to 1\n",
+       "    var symbol3 = new InputSymbol(stroke1, [300,300,350,350]);//x,y,x,y does not overlap with 1\n",
+       "    var symbol4 = new InputSymbol(stroke1, [110,110,150,150]);//x,y,x,y included in symbol1\n",
+       "    var symbol5 = new InputSymbol(stroke1, [100,100,150,300]);//x,y,x,y partial overlap\n",
+       "    var symbol6 = new InputSymbol(stroke1, [110,110,210,210]);//x,y,x,y patial overlap same size\n",
+       "    var symbol6 = new InputSymbol(stroke1, [100,200,200,300]);//x,y,x,y share one edge\n",
+       "\n",
+       "    assert(box_overlap(symbol1,symbol2));//identical --> overlap\n",
+       "    assert(!box_overlap(symbol1,symbol3));//no overlap\n",
+       "    assert(box_overlap(symbol1,symbol4));\n",
+       "    assert(box_overlap(symbol1,symbol5));\n",
+       "    assert(!box_overlap(symbol1,symbol6));//sharing an edge --> no overlap\n",
+       "    \n",
+       "    console.log(\"Duration\");\n",
+       "    time = new Date().getTime();\n",
+       "    box_overlap(symbol1,symbol2);\n",
+       "    console.log(new Date().getTime()-time); \n",
+       "    \n",
+       "    console.log(\"3. Testing overlap\");\n",
+       "    console.log(\"Duration in milliseconds\");\n",
+       "    time = new Date().getTime();    \n",
+       "    assert(!console.log(overlap(symbol1,symbol2)));\n",
+       "    console.log(new Date().getTime()-time);     \n",
        "}\n"
       ],
       "text/plain": [
@@ -670,34 +806,112 @@
     "    test_overlap_detection()\n",
     "});\n",
     "\n",
+    "function assert(condition, message) {\n",
+    "    if (!condition) {\n",
+    "        throw message || \"Assertion failed\";\n",
+    "    }\n",
+    "}\n",
+    "\n",
     "function overlap(symbol1,symbol2){\n",
-    "    if(box_overlap(symbol_1,symbol_2)){//check pixeloverlap efficiently\n",
-    "        //\n",
-    "        box1_xmin = null;\n",
-    "        box1_ymin = null;\n",
-    "        box2_xmin = null;\n",
-    "        box2_ymin = null;\n",
-    "                                       \n",
-    "        xmin = null;\n",
-    "        ymin = null;\n",
-    "        xmax = null;\n",
-    "        ymax = null;\n",
+    "    if(box_overlap(symbol1,symbol2)){//check overlap efficiently by checking coordinates first\n",
+    "        //then find intersection to avoid checking an unnecessarily large patch\n",
+    "        var xmin1 = symbol1.coordinates[0];\n",
+    "        var ymin1 = symbol1.coordinates[1];\n",
+    "        var xmax1 = symbol1.coordinates[2];\n",
+    "        var ymax1 = symbol1.coordinates[3];\n",
+    "\n",
+    "        var xmin2 = symbol2.coordinates[0];\n",
+    "        var ymin2 = symbol2.coordinates[1];\n",
+    "        var xmax2 = symbol2.coordinates[2];\n",
+    "        var ymax2 = symbol2.coordinates[3];\n",
+    "        \n",
+    "        var xmin = Math.max(xmin1,xmin2);\n",
+    "        var xmax = Math.min(xmin1,xmin2);\n",
+    "        var ymin = Math.max(ymin1,ymin2);\n",
+    "        var ymax = Math.min(ymin1,ymin2);\n",
+    "        \n",
+    "        var left1 = Math.abs(xmin1 - xmin);\n",
+    "        var top1 = Math.abs(ymin1 - ymin);\n",
+    "        \n",
+    "        var left2 = Math.abs(xmin2 - xmin);\n",
+    "        var top2 = Math.abs(ymin2 - ymin);\n",
+    "        \n",
+    "        var width = Math.min(xmax1,xmax2)-Math.max(xmin1,xmin2);\n",
+    "        var height = Math.min(ymax1,ymax2)-Math.max(ymin1,ymin2);\n",
+    "        \n",
+    "        console.log(\"left1 up1\");\n",
+    "        console.log(left1);\n",
+    "        console.log(top1);\n",
+    "        \n",
+    "        console.log(\"left2 up2\");\n",
+    "        console.log(left2);\n",
+    "        console.log(top2);\n",
+    "        \n",
+    "        console.log(width);\n",
+    "        console.log(height);\n",
+    "        \n",
+    "        var patch1 = symbol1.merged.slice([left1,top1],[height,width]);\n",
+    "        var patch2 = symbol2.merged.slice([left2,top2],[height,width]);\n",
+    "        \n",
+    "        var overlap = tf.any(tf.equal(tf.add(patch1, patch2),510));\n",
+    "        return Boolean(Array.from(overlap.dataSync())[0])\n",
+    "        \n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class InputSymbol { \n",
+    "    /* Sets stroke of type image_data and the respective coordinates. The red channel of the stroke is saved as a tensor*/\n",
+    "    constructor(stroke, coordinates) {\n",
+    "        this.input_strokes = [];\n",
+    "        this.coords = [];\n",
+    "        this.merged = null;\n",
+    "        this.is_alive = true;\n",
+    "        this.symbol_name = \"\";\n",
+    "        this.combined_coords = null;\n",
+    "        \n",
+    "        //var stroke1 = tf.tensor(Uint8Array.from(stroke1.data),[4,stroke1.data.height,stroke1.data.width]);\n",
+    "        this.add_stroke(stroke, coordinates);\n",
+    "        this.merged = this.input_strokes[0];//does this have side effects???\n",
+    "        //always the current coordinates; They may grow when another stroke is added \n",
+    "    }\n",
+    "    \n",
+    "    /*Adds a stroke i.e. an image_data to this.input_stokes as well coordinates i.e. a list of coordinates.\n",
+    "      Updates the combined coordinates\n",
+    "    */\n",
+    "    add_stroke(image_data, coordinates){\n",
+    "        image_data = tf.tensor(Uint8Array.from(image_data.data),[4,image_data.height,image_data.width]);\n",
+    "        var r,g,b,a;\n",
+    "        [r,g,b,a] = tf.split(image_data,[1,1,1,1],0);//Get all the colorchannels\n",
+    "        r = tf.squeeze(r);//use only red channel\n",
+    "        this.input_strokes.push(r);//we only save the red channel\n",
+    "        this.coords.push(coordinates);\n",
+    "        \n",
+    "        if(this.combined_coords){\n",
+    "            this.combined_coords = [Math.min(this.combined_coords[0],coordinates[0]),\n",
+    "                                    Math.min(this.combined_coords[1],coordinates[1]),\n",
+    "                                    Math.max(this.combined_coords[2],coordinates[2]),\n",
+    "                                    Math.max(this.combined_coords[3],coordinates[3])]\n",
+    "        } else this.combined_coords = coordinates;\n",
+    "        \n",
+    "    }\n",
+    "    \n",
+    "    get coordinates(){\n",
+    "        return this.combined_coords;\n",
     "    }\n",
     "}\n",
     "\n",
     "function box_overlap(symbol1,symbol2){\n",
-    "    xmin1 = symbol1.coordinates[0];\n",
-    "    ymin1 = symbol1.coordinates[1];\n",
-    "    xmax1 = symbol1.coordinates[2];\n",
-    "    ymax1 = symbol1.coordinates[3];\n",
+    "    var xmin1 = symbol1.coordinates[0];\n",
+    "    var ymin1 = symbol1.coordinates[1];\n",
+    "    var xmax1 = symbol1.coordinates[2];\n",
+    "    var ymax1 = symbol1.coordinates[3];\n",
     "\n",
-    "    xmin2 = symbol2.coordinates[0];\n",
-    "    ymin2 = symbol2.coordinates[1];\n",
-    "    xmax2 = symbol2.coordinates[2];\n",
-    "    ymax2 = symbol2.coordinates[3];\n",
+    "    var xmin2 = symbol2.coordinates[0];\n",
+    "    var ymin2 = symbol2.coordinates[1];\n",
+    "    var xmax2 = symbol2.coordinates[2];\n",
+    "    var ymax2 = symbol2.coordinates[3];\n",
     "    \n",
-    "    return (xmax1 > xmin2) && (xmax2 > xmin1) && (ymax1 > ymin2) && (ymax2 > ymin1) \n",
-    "        \n",
+    "    return (xmax1 > xmin2) && (xmax2 > xmin1) && (ymax1 > ymin2) && (ymax2 > ymin1)    \n",
     "}\n",
     "\n",
     "function pixel_overlap(pic1,pic2){\n",
@@ -715,8 +929,9 @@
     "}\n",
     "\n",
     "function test_overlap_detection(){\n",
+    "    var result = null;\n",
     "    \n",
-    "    console.log(\"Testing pixel_overlap\");\n",
+    "    console.log(\"1. Testing pixel_overlap\");//////////////// TEST 1 ////////////////////\n",
     "    var stroke1 = new ImageData(100,100);\n",
     "    var stroke2 = new ImageData(100,100);\n",
     "    \n",
@@ -726,27 +941,54 @@
     "    stroke1 = tf.tensor(Uint8Array.from(stroke1.data),[4,100,100]);\n",
     "    stroke2 = tf.tensor(Uint8Array.from(stroke2.data),[4,100,100]);\n",
     "    \n",
-    "    var result = pixel_overlap(stroke1,stroke2);\n",
+    "    result = pixel_overlap(stroke1,stroke2);\n",
     "    console.log(new Date().getTime()-time);\n",
     "    console.log(result);\n",
+    "\n",
+    "    console.log(\"2. Testing box overlap\");////////////////// TEST 2 /////////////////////\n",
+    "    var stroke1 = new ImageData(100,100);\n",
+    "    var stroke2 = new ImageData(100,100);\n",
     "    \n",
-    "    //overlap.print();\n",
-    "    //var result = overlap.toString().slice(11) == 'true'//discard initial part of string and parse boolean\n",
+    "    var symbol1 = new InputSymbol(stroke1, [100,100,200,200]);//x,y,x,y\n",
+    "    var symbol2 = new InputSymbol(stroke1, [100,100,200,200]);//x,y,x,y identical to 1\n",
+    "    var symbol3 = new InputSymbol(stroke1, [300,300,350,350]);//x,y,x,y does not overlap with 1\n",
+    "    var symbol4 = new InputSymbol(stroke1, [110,110,150,150]);//x,y,x,y included in symbol1\n",
+    "    var symbol5 = new InputSymbol(stroke1, [100,100,150,300]);//x,y,x,y partial overlap\n",
+    "    var symbol6 = new InputSymbol(stroke1, [110,110,210,210]);//x,y,x,y patial overlap same size\n",
+    "    var symbol6 = new InputSymbol(stroke1, [100,200,200,300]);//x,y,x,y share one edge\n",
+    "\n",
+    "    assert(box_overlap(symbol1,symbol2));//identical --> overlap\n",
+    "    assert(!box_overlap(symbol1,symbol3));//no overlap\n",
+    "    assert(box_overlap(symbol1,symbol4));\n",
+    "    assert(box_overlap(symbol1,symbol5));\n",
+    "    assert(!box_overlap(symbol1,symbol6));//sharing an edge --> no overlap\n",
+    "    \n",
+    "    console.log(\"Duration\");\n",
+    "    time = new Date().getTime();\n",
+    "    box_overlap(symbol1,symbol2);\n",
+    "    console.log(new Date().getTime()-time); \n",
+    "    \n",
+    "    console.log(\"3. Testing overlap\");\n",
+    "    console.log(\"Duration in milliseconds\");\n",
+    "    time = new Date().getTime();    \n",
+    "    assert(!console.log(overlap(symbol1,symbol2)));\n",
+    "    console.log(new Date().getTime()-time); \n",
+    "    \n",
+    "    \n",
+    "    assert(o)\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "============================\n",
-      "Hi there 👋. Looks like you are running TensorFlow.js in Node.js. To speed things up dramatically, install our node backend, which binds to TensorFlow C++, by running npm i @tensorflow/tfjs-node, or npm i @tensorflow/tfjs-node-gpu if you have CUDA. Then call require('@tensorflow/tfjs-node'); (-gpu suffix for CUDA) at the start of your program. Visit https://github.com/tensorflow/tfjs-node for more details.\n",
-      "============================\n"
+      "UsageError: Cell magic `%%node` not found.\n"
      ]
     }
    ],
